fixed block border
just the block should have a border not the block and the elements in it

--- a/views/edit/index.less
+++ b/views/edit/index.less
@@ -21,7 +21,7 @@
         transform: scale(0.95, 0.95);
         transform-origin: 50% top;
 
-        div, a {
+        > div, a {
             display: block;
             border: 1px dashed @highlight;
             margin-bottom: 15px;
@@ -32,6 +32,7 @@
             }
         }
     }
+
     #name-input {
         position: absolute;
         left: 0;
