--- a/components/block-editors/list/index.html
+++ b/components/block-editors/list/index.html
@@ -7,4 +7,4 @@
 	</li>
 </ul>
 
-<span class="add" v-on="click: items.push('')">{{ "add Element" | i18n }}</span>
+<span class="add" v-on="click: items.push('')">{{ "add Value" | i18n }}</span>
