add input placeholder, comment out remove button for eventual future use and change the add button to use its own class and display another name

--- a/components/block-editors/list/index.html
+++ b/components/block-editors/list/index.html
@@ -2,9 +2,9 @@
 
 <ul>
 	<li v-repeat="items" class="item-{{$index}}">
-		<input type="text" v-model="$value" v-on="input: items.$set($index, $value)">
-		<span class="remove" v-on="click: items.$remove($index)">{{ "remove" | i18n }}</span>
+		<input type="text" placeholder="{{'Option' | i18n}} {{$index+1}}" v-model="$value" v-on="input: items.$set($index, $value)">
+		<!--<span class="remove" v-on="click: items.$remove($index)">{{ "remove" | i18n }}</span>-->
 	</li>
 </ul>
 
-<span class="add" v-on="click: items.push('')">{{ "add Value" | i18n }}</span>
+<button type="button" class="btn btn-block btn-add" v-on="click: items.push('')">{{ 'Add Option' | i18n }}</button>
