add placeholder attribute

--- a/components/block-editors/string/index.html
+++ b/components/block-editors/string/index.html
@@ -1,2 +1,2 @@
 <label for="{{id}}">{{ label | i18n }}</label>
-<textarea name="{{id}}" type="text" v-model="value"></textarea>
+<textarea name="{{id}}" type="text" v-model="value" placeholder="{{ placeholder | i18n }}"></textarea>
