add basic styles for the dropdown block

--- a/blocks/dropdown/index.less
+++ b/blocks/dropdown/index.less
@@ -3,5 +3,10 @@
 
     select {
         width: 100%;
+        height: 45px !important;
+        border: 1px solid @lightGrey;
+        border-radius: 5px;
+        background-color: @white;
+        color: @turquoise;
     }
 }
