--- a/static/styles/forms.less
+++ b/static/styles/forms.less
@@ -60,6 +60,10 @@ label {
     }
 }
 
+::-moz-placeholder {
+    color: @mediumGrey;  
+}
+
 /*********************************************************
 * Input groups
 */
