[#161] added data dump to view
added view to show raw application data

--- a/views/data/index.html
+++ b/views/data/index.html
@@ -1,4 +1,11 @@
 <div v-component="makeBar" v-with="app"></div>
 <div v-component="navigationBar" style="top: 44px"></div>
 
-DATA VIEW
+Applications Data Dump
+<br>
+<br>
+
+<div style="border: 1px solid red; margin:4px; padding:4px;" v-repeat="data: collectedData">
+	{{data}}
+</div>
+
