--- a/blocks/submit/index.less
+++ b/blocks/submit/index.less
@@ -8,7 +8,7 @@
         min-height: 44px;
 
         border: none;
-        border-radius: 0;
+        border-radius: 5px;
         outline: none;
 
         color: @background;
