add placeholder attribute

--- a/components/block-editors/number/index.html
+++ b/components/block-editors/number/index.html
@@ -1,2 +1,2 @@
 <label for="{{id}}">{{ label | i18n }}</label>
-<input name="{{id}}" v-model="value" type="number">
+<input name="{{id}}" v-model="value" type="number" placeholder="{{ placeholder | i18n }}">
