correct attribute names, remove unnecessary html attributes, add skipAutoRender to the attributes and correct colors in stylesheet

--- a/blocks/submit/index.less
+++ b/blocks/submit/index.less
@@ -11,9 +11,9 @@
         border-radius: 5px;
         outline: none;
 
-        color: @background;
+        color: @white;
         background: none;
-        background-color: @highlight;
+        background-color: @turquoise;
         font-weight: 400;
         font-size: 1.0em;
     }
