[#218]change vue event to on-change to stop strange bug when entering text

--- a/components/block-editors/list/index.html
+++ b/components/block-editors/list/index.html
@@ -2,7 +2,7 @@
 
 <ul>
 	<li v-repeat="items" class="item-{{$index}}">
-		<input type="text" placeholder="{{'Option' | i18n}} {{$index+1}}" v-model="$value" v-on="input: items.$set($index, $value)">
+		<input type="text" placeholder="{{'Option' | i18n}} {{$index+1}}" v-model="$value" v-on="change: items.$set($index, $value)">
 		<span class="tip tip-remove" v-on="click: items.$remove($index)"></span>
 	</li>
 </ul>
