added sample data to data lib

--- a/views/data/index.html
+++ b/views/data/index.html
@@ -5,6 +5,6 @@ Applications Data Dump
 <br>
 <br>
 
-<div style="border: 1px solid red; margin:4px; padding:4px;" v-repeat="data: collectedData">
+<div style="border: 1px solid red; margin:4px; padding:4px;" v-repeat="data: currentDataSets">
 	{{data}}
 </div>
