--- a/static/styles/common.less
+++ b/static/styles/common.less
@@ -32,6 +32,10 @@ body, html {
     height: 100%;
     overflow: auto;
     .header-space;
+
+    &#play {
+        padding-top: 88px;
+    }
 }
 
 /*********************************************************
