--- a/static/styles/tips.less
+++ b/static/styles/tips.less
@@ -26,7 +26,7 @@
         border: 1px solid @mediumGrey;
         border-radius: 24px;
 
-        input[type=checkbox]:checked + & {
+        input[type=checkbox]:checked ~ & {
             background-color: @red;
 
             &:after {
