--- a/components/dataRepresentation/index.less
+++ b/components/dataRepresentation/index.less
@@ -1,63 +1,99 @@
-table.dataRepresentationDataSet {
-
+#dataRepresentation {
     @borderColor: @mediumGrey;
     @dataUnread: @lightGrey;
     @dataRead: @white;
 
-    width: 100%;
+    table.dataRepresentationDataSet {
+        width: 100%;
 
-    border-top: 1px solid @borderColor;
-    border-bottom: 1px solid @borderColor;
-    background-color: @dataRead;
-    &.unread {
-        background-color: @dataUnread;
-    }
-
-    &:not(:last-of-type)
-    {
-        margin-bottom: -1px;
-    }
-
-    th, td
-    {
-        font-size: 14px;
-        color: @darkGrey;
-    }
-
-    th {
-        padding: 10px 14px;
-        font-weight: medium;
-    }
-
-    td {
-        padding: 0 14px;
-        line-height: 16.5px;
-    }
-
-    thead {
+        border-top: 1px solid @borderColor;
         border-bottom: 1px solid @borderColor;
+        background-color: @dataRead;
+        &.unread {
+            background-color: @dataUnread;
+        }
+
+        &:not(:last-of-type)
+        {
+            margin-bottom: -1px;
+        }
+
+        th, td
+        {
+            font-size: 14px;
+            color: @darkGrey;
+        }
 
         th {
-            &:first-of-type {
-                text-align: left;
+            padding: 10px 14px;
+            font-weight: medium;
+        }
+
+        td {
+            padding: 0 14px;
+            line-height: 16.5px;
+        }
+
+        thead {
+            border-bottom: 1px solid @borderColor;
+
+            th {
+                &:first-of-type {
+                    text-align: left;
+                }
+                &:last-of-type {
+                    text-align: right;
+                }
             }
-            &:last-of-type {
-                text-align: right;
+        }
+
+        tbody {
+            display: block;
+            padding: 8px 0;
+
+            td {
+                display: block;
+                margin: 8px 0;
+
+                &:last-of-type {
+                    color: @mediumGrey;
+                }
+            }
+        }
+
+        .tip {
+            vertical-align: middle;
+        }
+    }
+
+    .dataRepresentationSelectAll {
+        width: 100%;
+        padding: 10px 14px;
+        margin-bottom: -1px;
+
+        border-top: 1px solid @borderColor;
+        border-bottom: 1px solid @borderColor;
+        background-color: @dataRead;
+
+        text-align: right;
+        font-weight: medium;
+
+        display: table;
+
+        label {
+            user-select: none;
+            -moz-user-select: none;
+            vertical-align: middle;
+
+            &:not(.tip) {
+                display: table-cell;
+                width: 100%;
             }
         }
     }
 
-    tbody {
-        display: block;
-        padding: 8px 0;
-
-        td {
-            display: block;
-            margin: 8px 0;
-
-            &:last-of-type {
-                color: @mediumGrey;
-            }
-        }
+    .dataRepresentationRemoveButton {
+        width: 100%;
+        height: 60px;
     }
 }
