--- a/components/templateCell/index.less
+++ b/components/templateCell/index.less
@@ -1,4 +1,4 @@
-#templateCell {
+.templateCell {
     width: 50%;
     height: 160px;
     overflow: hidden;
@@ -19,7 +19,7 @@
     &:nth-last-child(2) { border-width: 0 1px 0 0; }
 }
 
-#templateCell a {
+.templateCell a {
     display: block;
     width: 100%;
     height: 100%;
