--- a/components/appCell/index.html
+++ b/components/appCell/index.html
@@ -1,9 +1,9 @@
-<a class="cell" v-on="click: onClick" data-id="{{id}}" href="/make/{{id}}/{{mode || 'play'}}">
+<a class="cell" v-on="click: onClick" data-id="{{app.id}}" href="/make/{{app.id}}/{{mode || 'play'}}">
     <div class="left">
-        <span class="title">{{name}}</span>
-        <span v-if="author" class="description" v-bind-html="'by _'" v-with="{name: author.username|| guestKey}"></span>
+        <span class="title">{{app.name}}</span>
+        <span class="description" v-bind-html="'by _'"></span>
     </div>
     <div class="right">
-        <img class="app-icon" src="{{icon}}">
+        <img class="app-icon" src="{{app.icon}}">
     </div>
 </a>
