--- a/views/profile/index.html
+++ b/views/profile/index.html
@@ -19,7 +19,7 @@
 
   <ul class="list-cell">
       <lh>{{ "My Apps" | i18n }}</lh>
-      <li v-component="appCell" v-repeat="myApps"></li>
+      <li v-component="appCell" v-repeat="app: myApps"></li>
   </ul>
 
   <div class="no-apps" v-show="myApps.length == 0">
