--- a/www_src/components/action-menu/action-menu.less
+++ b/www_src/components/action-menu/action-menu.less
@@ -37,6 +37,7 @@
     height: @_primarySize;
     background: @blue;
     color: @white;
+    box-shadow: 0 4px 3px -2px rgba(0,0,0,0.2);
     position: absolute;
     bottom: 0;
     left: 0;
@@ -58,6 +59,7 @@
     height: @_secondarySize;
     background: @white;
     color: @slate;
+    box-shadow: 0 4px 3px -2px rgba(0,0,0,0.2);
     &.left {
       margin-left: -(@_secondarySize/2 + @_spacing);
     }
