--- a/www_src/pages/project/project.less
+++ b/www_src/pages/project/project.less
@@ -10,7 +10,7 @@
     box-sizing: content-box;
     transition: transform 0.3s ease-in-out;
   }
-  .test-container {
+  .bounding-inner {
     position: relative;
   }
   .page-container {
