--- a/www_src/pages/element/element.less
+++ b/www_src/pages/element/element.less
@@ -81,9 +81,8 @@
     box-sizing: content-box;
     height: 70%;
   }
-  p {
-    width: 70%;
-    font-size: 1.6rem;
+  textarea {
+    width: 100%;
   }
 }
 
