add mdoeration tool

--- a/www_src/main.less
+++ b/www_src/main.less
@@ -23,6 +23,7 @@
 @import "components/spindicator/spindicator";
 @import "components/tabs/tabs";
 @import "components/text-input/text-input";
+@import "components/moderation/moderation";
 
 // Pages ----------------------------------------------------------------------
 
